--- a/styles/login.css
+++ b/styles/login.css
@@ -9,6 +9,7 @@
     --whiteboard: #F0F0F0;
     --red: #ff0000;
     --header-color: #ffffff4d;
+    --peach: #f8bb86;
 }
 
 * {
@@ -32,6 +33,65 @@ body {
     overflow-x: hidden;
 } 
 
+
+
+/*---------------Modal for errors---------------*/
+.container-modal-error {
+    display:none;
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+    justify-content: center;
+    align-items: center;
+    margin-right:5px;
+}
+
+.modal-error {
+    padding-right: 32px;
+    padding-left: 32px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+    height: 300px;
+    width: 400px;
+    background-color: var(--white);
+    position: relative;
+}
+
+.warning-error {
+    color: var(--peach);
+    align-self: center;
+    font-size: 5rem;
+}
+
+.title-error {
+    color: var(--grey);
+    font-size: 1.41rem;
+    font-family: exo, sans-serif;
+    align-self:center;
+}
+
+.confirm-error {
+    color: var(--white);
+    background-color: var(--secondary-green);
+    border-style: none;
+    border-radius: 2px;
+    cursor: pointer;
+    width: 100px;
+    height: 30px;
+    align-self: center;
+}
+
+
+/*---------------Tooltip---------------*/
 
 .tooltip {
     position: relative;
@@ -180,7 +240,7 @@ img.toggle-password {
     border-style: none;
     padding: 15px;
     border-radius: 4px;
-    font-size: 15px;
+    font-size: 0.938rem;
 }
 
 
@@ -445,11 +505,20 @@ a img {
     }
 
     .social-button1, .social-button2, .social-button3 {
-        font-size: 14px;
+        font-size: 0.875rem;
     }
 
     a img {
         left: 45px;
+    }
+
+    .modal-error {
+        width: 280px;
+    }
+
+    .title-error {
+        font-size: 1rem;
+        text-align: center;
     }
 
 }
