--- a/styles/home.css
+++ b/styles/home.css
@@ -174,9 +174,8 @@ html {
     display: flex;
     flex-direction: column;
     flex-flow: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 24px;
-    max-width: 1137px;
 }
 
 .card-skeleton {
@@ -345,7 +344,7 @@ main {
 
 .container-single {
     display:none;
-    margin-left: 220px;
+    margin-left: 250px;
     flex-direction: column;
     gap: 24px;
 }
@@ -503,7 +502,7 @@ img.column-active, img.one-card-inactive {
 /*---------------Sidebar---------------*/
 
 nav {
-    min-width:200px;
+    min-width:160px;
 }
 
 .last-search.selected {
@@ -575,6 +574,7 @@ nav {
     color: var(--red);
     font-size: 1.375rem;
     font-weight: 700;
+    margin-right: auto;
 }
 
 /*---------------Game Cards---------------*/
@@ -586,8 +586,7 @@ nav {
     display: none;
     flex-flow: wrap;
     gap: 24px;
-    justify-content: flex-start;
-    flex: 1;
+    justify-content: center;
 }
 
 article {
@@ -605,6 +604,7 @@ article {
     position: absolute;
     right: 0;
     margin: 15px;
+    filter: drop-shadow(0px 0px 5px black);
 }
 
 .game-title {
@@ -709,6 +709,7 @@ img.switch-icon {
     position: absolute;
     right: 0;
     margin: 25px;
+    filter: drop-shadow(0px 0px 5px black);
 }
 
 img.heart-icon-sc {
@@ -838,6 +839,7 @@ img.playstation-sc-icon, img.xbox-sc-icon {
     right: 0;
     margin: 34px;
     cursor: pointer;
+    filter: drop-shadow(0px 0px 3px black);
 }
 
 .modal {
@@ -851,7 +853,7 @@ img.playstation-sc-icon, img.xbox-sc-icon {
     width: 75%;
     position: relative;
     background-color: var(--very-light-grey);
-    max-width: 1024px;
+    max-width: 1076px;
     max-height: 790px;
 }
 
@@ -1255,7 +1257,6 @@ hr:last-child {
         display:none;
     }
 
-
     .navigation-links a {
         color: var(--grey);
     }
@@ -1298,9 +1299,14 @@ hr:last-child {
         margin-left: 20px;
     }
 
+    .container-cards {
+        justify-content: flex-start;
+    }
+
     .modal {
         width: 96%;
         height: 97%;
+        max-height: 1024px;
     }
 
     .details-modal {
